[package]
name = "wenmeng"
version = "0.1.0"
edition = "2021"
authors = [ "tickbh <tickdream125@hotmail.com>" ]
description = "a http server for rust"
repository = "https://github.com/tickbh/dianmeng"
license = "Apache-2.0"
keywords = ["http1", "http2", "parse", "http"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.1", features = ["full"] }
tokio-stream = { version = "0.1.14" }
futures = { version = "0.3.0", features = ["thread-pool"]}
bytes = "1.4.0"

log="0.4.20"

tracing = { version = "0.1.21", default-features = false, features = ["std"] }
futures-core = { version = "0.3", default-features = false }
futures-sink = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }

rbtree = "0.1.5"

# http-body-util = { version = "1", optional = true }

webparse={version="0.1.3"}

[dev-dependencies]
reqwest={version="0.11"}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"


# [dependencies.webparse]
# path="../webparse"

# [[example]]
# name="client"
# path = "examples/client.rs"
# # [dependencies]