[package]
name = "wenmeng"
version = "0.1.1"
edition = "2021"
authors = [ "tickbh <tickdream125@hotmail.com>" ]
description = "a http server for rust"
repository = "https://github.com/tickbh/dianmeng"
license = "Apache-2.0"
keywords = ["http1", "http2", "parse", "http", "server", "client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.1", features = ["full"] }
tokio-stream = { version = "0.1.14" }
futures = { version = "0.3.0", features = ["thread-pool"]}
bytes = "1.4.0"
log="0.4.20"

tracing = { version = "0.1.21", default-features = false, features = ["std"] }
futures-core = { version = "0.3", default-features = false }
futures-sink = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
tokio-rustls="0.24"
webpki-roots = "0.25"
rustls="0.21"
rbtree = "0.1.5"
base64 = "0.21.4"
lazy_static = "1.4.0"

# webparse="0.1.5"

flate2 = "1.0"
brotli = "3.4.0"
# async-compression = {version="0.4.3", features=["all"]}

#"tokio", "brotli", "deflate", "gzip"

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.webparse]
path="../webparse"
